--- a/CSS/style.css
+++ b/CSS/style.css
@@ -717,9 +717,10 @@
 }
 .donation-events{
     display: flex;
-    width: max-content;
+    width: 100%;
     height: max-content;
     justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
 .donation-events-main{
@@ -728,6 +729,7 @@
     justify-content: space-evenly;
     width: max-content;
     height: max-content;
+    flex-wrap: wrap;
 }
 .donation-events-main-1{
     display: flex;
@@ -779,6 +781,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    justify-content: space-around;
     padding-left: 10px;
 }
 .donation-events-main-2-1{
@@ -928,7 +931,6 @@
     height: max-content;
     display: flex;
     justify-content: center;
-    padding-left: 20px;
 }
 .newsletter-div{
     display: flex;
@@ -981,7 +983,21 @@
     font-weight: bolder;
     font-size: larger;
 }
-
+.sponsers{
+    width: 100%;
+    height: fit-content;
+    background-color: rgb(3, 37, 76);
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.sponsers div{
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
 
 
 
