--- a/CSS/style.css
+++ b/CSS/style.css
@@ -72,10 +72,10 @@
 }
 .navwht ul{
     display: flex;
-    flex-direction: row;
     justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
-    gap: 8px;
+    gap: 10px;
     flex-wrap: wrap;
 }
 .navwht ul li a{
@@ -86,7 +86,6 @@
     transition: 0.6s;
     white-space: nowrap;
     font-weight: bold;
-    
 }
 .navwht ul li img{
     float: left;
@@ -623,6 +622,8 @@
     height: max-content;
     width: fit-content;
     white-space: nowrap;
+    padding-left: 50px;
+    padding-right: 50px;
 }
 .kings-news-right-div-6links div a{
     display: flex;
@@ -739,6 +740,7 @@
     justify-content: center;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
 }
 .donation-events-main{
     display: flex;
