about half done

--- a/CSS/css-about.css
+++ b/CSS/css-about.css
@@ -72,6 +72,7 @@
     justify-content: center;
     justify-content: space-between;
     justify-content: space-around;
+    padding: 30px;
 }
 .kings-features-divs h1{
     font-size: x-large;
