--- a/CSS/css-about.css
+++ b/CSS/css-about.css
@@ -89,7 +89,8 @@
     display: flex;
     justify-content: center;
     justify-content: space-between;
-    width: auto;
+    width: 100%;
+    height: fit-content;
 }
 .about-faclities-img{
     width: 50%;
