--- a/CSS/style.css
+++ b/CSS/style.css
@@ -981,8 +981,13 @@
 }
 .newsletter-div-email input{
     background-color: rgb(3, 37, 76);
-    padding-left: 45px;
-    padding-right: 45px;
+    padding-left: 25px;
+    padding-right: 25px;
+    width: 250px;
+    height: 50px;
+    border: none;
+    font-size: 16px;
+    color: aliceblue;
 }
 .newsletter-div-subs{
     padding-top: 50px;
